namespaces/live.cloud-platform.service.justice.gov.uk/visit-someone-in-prison-frontend-svc-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: visit-someone-in-prison-frontend-svc-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "visits-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "visits-alerts"
    cloud-platform.justice.gov.uk/application: "Visit Someone in Prison"
    cloud-platform.justice.gov.uk/owner: "Prisoner Communications: prisonvisitsbooking@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/book-a-prison-visit-staff-ui,https://github.com/ministryofjustice/hmpps-visits-internal-admin-ui,https://github.com/ministryofjustice/hmpps-book-a-prison-visit-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-prison-visits-booking"
